# sygedagpenge-rapport-34

./: README.md  pyproject.toml  run.bat
robot_framework/: config.py  process.py
robot_framework/sub_process/: excel_process.py  ksd_process.py
