[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "itk-dev-shared-components == 2.*",
    "OpenOrchestrator == 1.*",
    "Pillow == 9.5.0",
    "selenium == 4.22.0",
    "uiautomation == 2.0.18",
    "requests == 2.32.3",
    "openpyxl == 3.1.2"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]